--- a/index.html
+++ b/index.html
@@ -32,15 +32,20 @@
 				</p>
 			</section>
 			<section>
-
+<section data-auto-animate>
+	<h2><strong>Flex-box & align properties</strong></h2>
+	<h3><span> Align-Items</span></h3>
+	<img src="assets/align-items/center1.png" alt="image" style="height:280px;">
+	<p>In these examples we will use a 200 pixels high container, to better demonstrate the align-items property.</p>
+	
+</section>
 
 
 <!-- center -->
 				<section data-auto-animate>
-					<h2><strong>Flex-box & align properties</strong></h2>
 					<h3>Align-Items <span> = center</span></h3>
 					<img src="assets/align-items/center1.png" alt="image" style="height:100px;">
-					<p>In these examples we will use a 200 pixels high container, to better demonstrate the align-items property.</p>
+					<p>The center value aligns the flex items in the middle of the container.</p>
 					<img src="assets/align-items/center2.png" alt="center" style="box-shadow: 5px 5px;">
 					<button><a href="https://www.w3schools.com/css/tryit.asp?filename=trycss3_flexbox_align-items_center">Live Demo</a></button>
 				</section>
@@ -129,39 +134,65 @@ The space-around value displays the flex lines with space before, between, and a
 					</p>
 				</section>
 				<section  style="font-size: 1.5rem; background-color:#dddddd; color:black">
-					<h2 style="color: black;"><strong>Break points</strong></h2>
+					<h3 style="color: rgb(4, 48, 6);">Align-content<span style="color: rgb(68, 15, 129);"> = stretch</span></h3>
 					<figure>
 						<figcaption>Syntax:</figcaption>
-						<img src="assets/breakpoints.png" alt="">
+						<img src="assets/align-content/stretch.png" alt="">
 					</figure>
 					<!-- description -->
 					<p>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, labore fugiat impedit odit temporibus saepe tempore cum iure ratione natus eos omnis suscipit facilis laboriosam nihil voluptatum debitis vero libero.
+The stretch value stretches the flex lines to take up the remaining space (this is default):
 						
 					</p>
+					<p><a href="https://www.w3schools.com/css/tryit.asp?filename=trycss3_flexbox_align-content_stretch">Live
+							Demo</a>
+					</p>
 				</section>
-			</section>
-			<section>
-				<section>
-					<h2><strong>Common Breakpoints: Is there a Standard Resolution?</strong></h2>
+				<section style="font-size: 1.5rem; background-color:#dddddd; color:black">
+					<h3 style="color: rgb(4, 48, 6);">Align-content<span style="color: rgb(68, 15, 129);"> = center</span></h3>
 					<figure>
-						<img src="assets/img_temp_band.jpg" alt="img">
-						<figcaption> <a href="#nextp">Read More</a> </figcaption>
+						<figcaption>Syntax:</figcaption>
+						<img src="assets/align-content/center.png" alt="image">
 					</figure>
+					<!-- description -->
+					<p>
+						The center value displays display the flex lines in the middle of the container:
+
+					</p>
+					<p><a href="https://www.w3schools.com/css/tryit.asp?filename=trycss3_flexbox_align-content_center">Live
+							Demo</a>
+					</p>
 				</section>
-				<section id="nextp">
-					<!-- More about breakpoints -->
-					<p></p>
-					<p></p>
-					<p></p>
-					<ul style="list-style: square;">
-						<li></li>
-					</ul>
+				<section style="font-size: 1.5rem; background-color:#dddddd; color:black">
+					<h3 style="color: rgb(4, 48, 6);">Align-content<span style="color: rgb(68, 15, 129);"> = flex-start</span></h3>
+					<figure>
+						<figcaption>Syntax:</figcaption>
+						<img src="assets/align-content/start.png" alt="image">
+					</figure>
+					<!-- description -->
+					<p>
+						The flex-start value displays the flex lines at the start of the container.
+
+					</p>
+					<p><a href="https://www.w3schools.com/css/tryit.asp?filename=trycss3_flexbox_align-content_flex-start">Live
+							Demo</a>
+					</p>
 				</section>
-			</section>
-			<section>
-				<h2>videopage</h2>
-				<video src="#" controls></video>
+				<section style="font-size: 1.5rem; background-color:#dddddd; color:black">
+					<h3 style="color: rgb(4, 48, 6);">Align-content<span style="color: rgb(68, 15, 129);"> = flex-end</span></h3>
+					<figure>
+						<figcaption>Syntax:</figcaption>
+						<img src="assets/align-content/end.png" alt="image">
+					</figure>
+					<!-- description -->
+					<p>
+						The flex-end value displays the flex lines at the end of the container.
+
+					</p>
+					<p><a href="https://www.w3schools.com/css/tryit.asp?filename=trycss3_flexbox_align-content_flex-end">Live
+							Demo</a>
+					</p>
+				</section>
 			</section>
 			<section>
 				<h1>Thank you!!!</h1>
